--- a/Guias dps/tercer desafio practico/tercer-desafio/package.json
+++ b/Guias dps/tercer desafio practico/tercer-desafio/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "alertifyjs": "^1.13.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.0",
     "react-scripts": "4.0.0",
+    "reactstrap": "^8.7.1",
     "save": "^2.4.0",
     "tailwindcss": "^1.9.6",
     "web-vitals": "^0.2.4"
